# free-driver

./: .gitignore  README.md  stack.yaml
app/: drive-examples.cabal
app/src/Algebra/: Cards.hs  Search.hs
app/src/Examples/: Browser.hs  File.hs  HTTP.hs  Intercom.hs  Log.hs  Slack.hs  Trello.hs
app/src/Examples/Intercom/: Interpreters.hs  Programs.hs
app/test/: Test.hs
app/test/Test/Drive/: Algebras.hs  Basics.hs  Basics03.hs
apps/src/Examples/Intercom/: Interpreters.hs  Programs.hs
apps/test/Test/Drive/: Basics03.hs
apps/trello-terminal/: drive-trello-terminal.cabal  package.yaml
apps/trello-terminal/src/: Main.hs
examples/trello-terminal/src/: Main.hs
plugins/drive-base/: drive-base.cabal
plugins/drive-base/src/: Drive.hs
plugins/drive-base/src/Drive/: Interpreter.hs
plugins/drive-browser/: drive-browser.cabal
plugins/drive-browser/src/Drive/: Browser.hs
plugins/drive-browser/src/Drive/Browser/: API.hs  Commands.hs  Configuration.hs  Ref.hs  Types.hs
plugins/drive-describe/: drive-describe.cabal
plugins/drive-describe/src/Drive/: Describe.hs
plugins/drive-describe/src/Drive/Describe/: API.hs  Handlers.hs  Types.hs
plugins/drive-file/: drive-file.cabal
plugins/drive-file/src/Drive/: File.hs
plugins/drive-http/: drive-http.cabal
plugins/drive-http/src/Drive/: HTTP.hs  NetworkSession.hs
plugins/drive-http/src/Drive/HTTP/: API.hs  Handlers.hs  Types.hs
plugins/drive-intercom/: drive-intercom.cabal
plugins/drive-intercom/src/Drive/: Intercom.hs
plugins/drive-intercom/src/Drive/Intercom/: API.hs  Handlers.hs  Types.hs
plugins/drive-intercom/src/Drive/Intercom/Types/: Admins.hs  Conversation.hs  Pagination.hs  Users.hs
plugins/drive-slack/: drive-slack.cabal
plugins/drive-slack/src/Drive/: Slack.hs
plugins/drive-slack/src/Drive/Slack/: API.hs  Handlers.hs  Types.hs
plugins/drive-trello/: drive-trello.cabal
plugins/drive-trello/src/Drive/: Trello.hs
plugins/drive-trello/src/Drive/Trello/: API.hs  Handlers.hs  Types.hs
