name:                drive-examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/palf/free-driver#readme
license:             BSD3
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
copyright:           2016 Jack Palfrey
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable drive-describe
  hs-source-dirs:      src
  main-is:             Examples/Log.hs
  build-depends:       base
                     , drive-base
                     , drive-describe
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
  default-language:    Haskell2010


executable drive-file
  hs-source-dirs:      src
  main-is:             Examples/File.hs
  build-depends:       base
                     , drive-base
                     , drive-describe
                     , drive-file
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
  default-language:    Haskell2010


executable drive-http
  hs-source-dirs:      src
  main-is:             Examples/HTTP.hs
  build-depends:       base
                     , drive-base
                     , drive-http
                     , bytestring
                     , yaml
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
  default-language:    Haskell2010


executable drive-browser
  hs-source-dirs:      src
  main-is:             Examples/Browser.hs
  build-depends:       base
                     , drive-base
                     , drive-browser
                     , drive-describe
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
  default-language:    Haskell2010


executable drive-trello
  hs-source-dirs:      src
  main-is:             Examples/Trello.hs
  build-depends:       base
                     , drive-base
                     , drive-trello
                     , drive-describe
                     , text
                     , free
                     , yaml
                     , mtl
                     , drive-http
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
  default-language:    Haskell2010


executable drive-slack
  hs-source-dirs:      src
  main-is:             Examples/Slack.hs
  build-depends:       base
                     , drive-base
                     , drive-slack
                     , drive-describe
                     , slack-api
                     , text
                     , bytestring
                     , yaml
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
  default-language:    Haskell2010


executable drive-intercom
  hs-source-dirs:      src
  main-is:             Examples/Intercom.hs
  other-modules:       Examples.Intercom.Programs
                     , Examples.Intercom.Interpreters
  build-depends:       base
                     , drive-base
                     , drive-intercom
                     , drive-describe
                     , drive-http
                     , free
                     , yaml
                     , text
                     , mtl
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RankNTypes
                     , TypeOperators
                     , FlexibleContexts
  default-language:    Haskell2010


test-suite drive-test
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveFunctor
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiParamTypeClasses
                     , TemplateHaskell
                     , TypeOperators
                     , RankNTypes
                     , ScopedTypeVariables


  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.Drive.Algebras
                     , Test.Drive.Basics
                     , Test.Drive.Basics03
  build-depends:       base >= 4 && < 5
                     , containers
                     , mtl
                     , aeson
                     , yaml
                     , syb
                     , text
                     , time
                     , bytestring
                     , drive-base
                     , drive-describe
                     , free
                     , operational
                     , drive-file
                     , drive-http
                     , drive-trello
                     , drive-intercom
                     , drive-browser
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/palf/free-driver
