name:                drive-base
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/palf/free-driver#readme
license:             BSD3
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
copyright:           2016 Jack Palfrey
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Drive
  other-modules:       Drive.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , free
                     , operational
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/palf/free-driver
