name:                drive-http
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/palf/free-driver#readme
license:             BSD3
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
copyright:           2016 Jack Palfrey
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Drive.HTTP
  other-modules:       Drive.HTTP.Types
                     , Drive.HTTP.API
                     , Drive.HTTP.Handlers
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , comonad
                     , drive-base
                     , drive-describe
                     , http-types
                     , exceptions
                     , lens
                     , http-client
                     , free
                     , mtl
                     , text
                     , transformers
                     , wreq
                     , http-client
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/palf/free-driver
